Duct tape weird issue on mobile (prob a off-view tooltip)

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -13,6 +13,10 @@
   background-color: var(--darker); /* Give it a thin, blue line look for separation */
 }
 
+html {
+  overflow-x: hidden;
+}
+
 h4 {
   font-size: 1.5rem;
   color: var(--weird);
